fix height on mobile

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -46,6 +46,7 @@ div {
 @media only screen and (max-width: 700px) {
   .App {
     display: flex;
+    height: auto;
   }
   .App > div {
     box-shadow: none !important;
